welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: value lenght is not a member of Array[java.awt.Color]
	for (i <- 1 to T.lenght)
                         ^