welcome.lessons.welcome.array.basics.Array1.scala.code
var T = new Array[Color] (hauteur);
var hauteur:Int= getMondeHauteur();
def getMotif():Array[Color] =
{
	for (i <- 1 to T.lenght)
	{
		T(1)=getCouleurSol();
		avance();
	} 	 
}


override def run() {

getMotif();
}
gauche(); 
avance();
droite();
avance(2);


